# OpenStackClient_VBS

./: .coveragerc  .nosetests  .testr.conf  README.html  README.md  README.rst  setup.cfg
tools/: hacking.sh
vbclient/common/: display.py  exceptions.py  httpclient.py  i18n.py  manager.py  parser_builder.py  resource.py  utils.py
vbclient/osc/: plugin.py
vbclient/osc/v1/: backup.py  job.py  parser_builder.py
vbclient/osc/v2/: backup.py
vbclient/tests/: base.py  fakes.py
vbclient/tests/common/: test_display.py  test_exceptions.py  test_httpclient.py  test_manager.py  test_resource.py  test_utils.py
vbclient/tests/osc/: test_plugin.py
vbclient/tests/osc/v1/: test_job.py
vbclient/tests/osc/v2/: test_backup.py
vbclient/v1/: backup_mgr.py  client.py  job_mgr.py  resource.py  restore_mgr.py
vbclient/v2/: backup_mgr.py  client.py  resource.py  restore_mgr.py
